--- a/index.html
+++ b/index.html
@@ -6,145 +6,105 @@
     <title>YARMA | Luxury Collective</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Syncopate:wght@700&family=Inter:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Syncopate:wght@700&family=Inter:wght@400;900&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Inter', sans-serif; background: #050505; color: #fff; overflow-x: hidden; scroll-behavior: smooth; }
-        canvas { position: fixed; top: 0; left: 0; z-index: -1; pointer-events: none; }
-        .glass { background: rgba(0, 0, 0, 0.85); backdrop-filter: blur(20px); border: 1px solid rgba(255,255,255,0.05); }
+        body { font-family: 'Inter', sans-serif; background: #000; color: #fff; margin: 0; overflow-x: hidden; }
+        canvas { position: fixed; top: 0; left: 0; z-index: -1; }
+        .glass { background: rgba(0, 0, 0, 0.8); backdrop-filter: blur(15px); border: 1px solid rgba(255,255,255,0.1); }
         .font-mag { font-family: 'Syncopate', sans-serif; }
-        .section-active { display: block !important; animation: fadeIn 0.8s ease forwards; }
-        .section-hidden { display: none; }
-        @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
-        ::-webkit-scrollbar { display: none; }
-        .nav-link { cursor: pointer; position: relative; transition: color 0.3s; }
-        .nav-link:hover { color: #ff3e00; }
-        .product-card { transition: all 0.5s ease; }
-        .product-card:hover { transform: translateY(-10px); border-color: #ff3e00; }
+        section { display: none; min-height: 100vh; width: 100%; padding-top: 100px; }
+        section.active { display: block; }
+        .nav-link { cursor: pointer; text-transform: uppercase; font-size: 10px; tracking: 0.2em; }
+        .product-card { background: #0a0a0a; border: 1px solid #1a1a1a; border-radius: 20px; overflow: hidden; }
     </style>
 </head>
 <body>
 
-    <canvas id="canvas3d"></canvas>
+<canvas id="canvas3d"></canvas>
 
-    <nav class="fixed top-0 w-full z-[100] px-8 py-6 flex justify-between items-center bg-black/50 backdrop-blur-md border-b border-white/5">
-        <div class="font-mag text-xl tracking-[0.5em] text-red-600 cursor-pointer" onclick="showSection('home')">YARMA</div>
-        <div class="hidden md:flex gap-10 text-[10px] uppercase tracking-[0.3em] font-bold">
-            <span class="nav-link" onclick="showSection('home')">Home</span>
-            <span class="nav-link" onclick="showSection('shop')">Shop</span>
-            <span class="nav-link" onclick="showSection('about')">About</span>
-            <span class="nav-link" onclick="showSection('contact')">Contact</span>
-        </div>
-        <div class="flex gap-4 items-center">
-            <a href="tel:8869089461" class="border border-white/10 p-2 rounded-full hover:bg-red-600 transition">
-                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
-            </a>
-            <button onclick="toggleMenu()" class="md:hidden text-[10px] tracking-widest font-black border border-white/20 px-3 py-1">MENU</button>
-        </div>
-    </nav>
-
-    <div id="mobile-menu" class="fixed inset-0 z-[110] glass hidden flex flex-col justify-center items-center gap-10 text-2xl font-mag uppercase tracking-widest">
-        <p onclick="showSection('home')" class="hover:text-red-600 cursor-pointer">Home</p>
-        <p onclick="showSection('shop')" class="hover:text-red-600 cursor-pointer">Shop</p>
-        <p onclick="showSection('about')" class="hover:text-red-600 cursor-pointer">About Us</p>
-        <p onclick="showSection('contact')" class="hover:text-red-600 cursor-pointer">Contact</p>
-        <button onclick="toggleMenu()" class="text-xs text-gray-500 border border-white/10 px-6 py-2 rounded-full mt-10">CLOSE [X]</button>
+<nav class="fixed top-0 w-full z-[100] px-6 py-4 flex justify-between items-center glass">
+    <div class="font-mag text-lg tracking-widest text-red-600" onclick="showSection('home')">YARMA</div>
+    <div class="hidden md:flex gap-8">
+        <span class="nav-link" onclick="showSection('home')">Home</span>
+        <span class="nav-link" onclick="showSection('shop')">Shop</span>
+        <span class="nav-link" onclick="showSection('about')">About</span>
     </div>
+    <button onclick="toggleMenu()" class="md:hidden text-[10px] border border-white/20 px-4 py-1">MENU</button>
+</nav>
 
-    <section id="home-section" class="h-screen flex flex-col justify-center items-center text-center px-6 section-active">
-        <h1 class="font-mag text-5xl md:text-9xl tracking-tighter mb-4 italic">YARMA</h1>
-        <p class="text-[10px] tracking-[1em] text-gray-500 mb-12 uppercase">Ishaan & Munendra Collective</p>
-        <div class="flex flex-col md:flex-row gap-4">
-            <button onclick="showSection('shop')" class="bg-white text-black px-12 py-4 rounded-full font-black uppercase text-[10px] tracking-widest hover:invert transition">Enter Shop</button>
-            <button onclick="showSection('about')" class="border border-white/20 px-12 py-4 rounded-full font-black uppercase text-[10px] tracking-widest hover:bg-white/5 transition">Our Story</button>
+<div id="mobile-menu" class="fixed inset-0 z-[110] glass hidden flex flex-col justify-center items-center gap-8 text-xl font-mag">
+    <p onclick="showSection('home')">Home</p>
+    <p onclick="showSection('shop')">Shop</p>
+    <p onclick="showSection('about')">About</p>
+    <button onclick="toggleMenu()" class="text-sm border border-white/20 px-6 py-2 rounded-full">CLOSE</button>
+</div>
+
+<section id="home" class="active flex flex-col justify-center items-center text-center">
+    <h1 class="font-mag text-6xl md:text-9xl mb-4 italic">YARMA</h1>
+    <p class="tracking-[0.8em] text-gray-500 text-[10px] mb-10 uppercase">Ishaan & Munendra</p>
+    <div class="flex gap-4">
+        <button onclick="showSection('shop')" class="bg-white text-black px-10 py-3 rounded-full font-bold uppercase text-[10px]">Shop Now</button>
+        <button onclick="showSection('about')" class="border border-white/20 px-10 py-3 rounded-full font-bold uppercase text-[10px]">Our Story</button>
+    </div>
+</section>
+
+<section id="shop" class="px-6">
+    <h2 class="font-mag text-center text-2xl mb-12 text-red-600">COLLECTION</h2>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-6xl mx-auto">
+        <div class="product-card p-4">
+            <div class="h-64 bg-zinc-900 rounded-xl mb-4"></div>
+            <h3 class="font-bold">VORTEX HOODIE</h3>
+            <p class="text-red-500 font-black">₹5,499</p>
+            <button onclick="window.location.href='tel:8869089461'" class="w-full mt-4 bg-white text-black py-2 rounded-lg font-bold text-xs">BUY NOW</button>
         </div>
-    </section>
-
-    <section id="shop-section" class="section-hidden pt-32 px-6 pb-20 max-w-7xl mx-auto">
-        <h2 class="font-mag text-center text-2xl mb-16 tracking-widest uppercase text-red-600">The Drop</h2>
-        <div id="product-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10"></div>
-    </section>
-
-    <section id="about-section" class="section-hidden pt-32 px-10 pb-20">
-        <div class="max-w-4xl mx-auto glass p-12 md:p-20 rounded-[3rem] text-center border-t-2 border-red-600">
-            <h2 class="font-mag text-2xl mb-10 italic uppercase text-red-600">The Vision</h2>
-            <p class="text-lg md:text-2xl font-light leading-relaxed text-gray-300 mb-10">
-                YARMA is a luxury streetwear label founded and executed by <span class="text-white font-bold">Ishaan</span> and <span class="text-white font-bold">Munendra</span>. 
-            </p>
-            <p class="text-[10px] tracking-[0.5em] text-red-500 uppercase font-black italic">Owned and Executed by Ishaan & Munendra</p>
+        <div class="product-card p-4">
+            <div class="h-64 bg-zinc-900 rounded-xl mb-4"></div>
+            <h3 class="font-bold">STEALTH TEE</h3>
+            <p class="text-red-500 font-black">₹2,999</p>
+            <button onclick="window.location.href='tel:8869089461'" class="w-full mt-4 bg-white text-black py-2 rounded-lg font-bold text-xs">BUY NOW</button>
         </div>
-    </section>
+    </div>
+</section>
 
-    <section id="contact-section" class="section-hidden pt-32 px-10 pb-20">
-        <h2 class="font-mag text-center text-2xl mb-16 uppercase tracking-widest">Connect with Owners</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-4xl mx-auto">
-            <div class="glass p-12 rounded-[3rem] text-center">
-                <p class="text-[10px] text-gray-500 mb-4 uppercase tracking-widest">Founder</p>
-                <h3 class="text-3xl font-black italic mb-8">ISHAAN</h3>
-                <a href="tel:8869089461" class="inline-flex bg-red-600 p-6 rounded-full shadow-lg hover:scale-110 transition">Call Ishaan</a>
-            </div>
-            <div class="glass p-12 rounded-[3rem] text-center">
-                <p class="text-[10px] text-gray-500 mb-4 uppercase tracking-widest">Founder</p>
-                <h3 class="text-3xl font-black italic mb-8">MUNENDRA</h3>
-                <a href="tel:8218415994" class="inline-flex bg-white text-black p-6 rounded-full shadow-lg hover:scale-110 transition">Call Munendra</a>
-            </div>
+<section id="about" class="px-10">
+    <div class="max-w-3xl mx-auto glass p-10 rounded-3xl text-center">
+        <h2 class="font-mag text-xl mb-6 text-red-600">THE VISION</h2>
+        <p class="text-gray-400 leading-relaxed mb-6">YARMA is a luxury streetwear label founded by Ishaan and Munendra. High-end quality for those who lead.</p>
+        <div class="flex justify-around mt-10">
+            <div><p class="text-[10px] text-gray-500 uppercase">Founder</p><p class="font-bold">ISHAAN</p></div>
+            <div><p class="text-[10px] text-gray-500 uppercase">Founder</p><p class="font-bold">MUNENDRA</p></div>
         </div>
-    </section>
+    </div>
+</section>
 
-    <script>
-        // Background Animation
-        const scene = new THREE.Scene();
-        const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-        const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('canvas3d'), alpha: true, antialias: true });
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        const particlesGeometry = new THREE.BufferGeometry();
-        const count = 2000;
-        const positions = new Float32Array(count * 3);
-        for(let i=0; i<count*3; i++) positions[i] = (Math.random() - 0.5) * 40;
-        particlesGeometry.setAttribute('position', new THREE.BufferAttribute(positions, 3));
-        const particlesMaterial = new THREE.PointsMaterial({ size: 0.015, color: 0xffffff, transparent: true, opacity: 0.3 });
-        const particles = new THREE.Points(particlesGeometry, particlesMaterial);
-        scene.add(particles);
-        camera.position.z = 5;
-        function animate() { requestAnimationFrame(animate); particles.rotation.y += 0.0003; renderer.render(scene, camera); }
-        animate();
+<script>
+    // BG
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+    const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('canvas3d'), alpha: true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    const geo = new THREE.BufferGeometry();
+    const pos = new Float32Array(1500 * 3);
+    for(let i=0; i<4500; i++) pos[i] = (Math.random() - 0.5) * 30;
+    geo.setAttribute('position', new THREE.BufferAttribute(pos, 3));
+    const mat = new THREE.PointsMaterial({ size: 0.02, color: 0xffffff });
+    const points = new THREE.Points(geo, mat);
+    scene.add(points);
+    camera.position.z = 5;
+    function anim() { requestAnimationFrame(anim); points.rotation.y += 0.001; renderer.render(scene, camera); }
+    anim();
 
-        // Section Toggle Logic
-        window.showSection = function(id) {
-            document.querySelectorAll('section').forEach(s => {
-                s.classList.remove('section-active');
-                s.classList.add('section-hidden');
-            });
-            const target = document.getElementById(id + '-section');
-            if(target) {
-                target.classList.remove('section-hidden');
-                target.classList.add('section-active');
-            }
-            document.getElementById('mobile-menu').classList.add('hidden');
-            window.scrollTo(0,0);
-        };
-
-        window.toggleMenu = function() {
-            document.getElementById('mobile-menu').classList.toggle('hidden');
-        };
-
-        // Product Generation
-        const products = [
-            { name: "Vortex Hoodie", price: 5499, img: "https://images.unsplash.com/photo-1556821840-3a63f95609a7?w=600" },
-            { name: "Stealth Tee", price: 2999, img: "https://images.unsplash.com/photo-1521572267360-ee0c2909d518?w=600" },
-            { name: "Phantom Sneakers", price: 12499, img: "https://images.unsplash.com/photo-1542291026-7eec264c27ff?w=600" }
-        ];
-        const grid = document.getElementById('product-grid');
-        [...products, ...products, ...products].forEach(p => {
-            grid.innerHTML += `
-                <div class="product-card glass p-5 rounded-[2.5rem] border border-transparent">
-                    <div class="overflow-hidden rounded-[2rem] h-80 mb-6"><img src="${p.img}" class="w-full h-full object-cover"></div>
-                    <div class="flex justify-between items-end px-2">
-                        <div><h3 class="font-bold text-sm uppercase">${p.name}</h3><p class="text-red-500 font-black">₹${p.price}</p></div>
-                        <button onclick="window.location.href='tel:8869089461'" class="bg-white text-black px-4 py-2 rounded-xl text-[10px] font-bold">BUY</button>
-                    </div>
-                </div>`;
-        });
-    </script>
+    // Navigation
+    function showSection(id) {
+        document.querySelectorAll('section').forEach(s => s.classList.remove('active'));
+        document.getElementById(id).classList.add('active');
+        document.getElementById('mobile-menu').classList.add('hidden');
+        window.scrollTo(0,0);
+    }
+    function toggleMenu() {
+        document.getElementById('mobile-menu').classList.toggle('hidden');
+    }
+</script>
 </body>
 </html>
+
